写真関連エンティティに値オブジェクト（DDD）パターンを導入
PhotoMst・PhotoTagMst・PhotoFavoriteのプロパティを14個の値オブジェクトに置き換え、
対応するTypeHandler・MyBatis XML・Model・Response・Service・Repository・テストを全層更新

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>